# ksysbar

./: .gitignore  CMakeLists.txt  README.md  build.sh  dev.sh  tsconfig.json
package/: metadata.desktop
package/contents/ui/: main.qml
ts/: kf5_systemmonitor.d.ts  ksysbar.ts  qt.d.ts
